manifests/db-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sql-server-pod
  namespace: applicationnamespace
spec:
  volumes:
    - name: sqldb-volume
      persistentVolumeClaim:
        claimName: mssql-db-pvc
  containers:
    - name: sql-server
      image: mcr.microsoft.com/mssql/server:2019-latest
      securityContext:
        allowPrivilegeEscalation: false
        runAsUser: 0
      # command: ["/bin/bash", "-c"]
      # args:
      #   - apt-get update && apt-get install -y mssql-tools
      #   - sqlcmd -S $SA_HOST -U $SA_USER -P $SA_PASSWORD -d $DB_NAME -i databaseservice/sqldatabasescript.sql
      ports:
        - containerPort: 1433
      volumeMounts:
        - name: sqldb-volume
          mountPath: /var/opt/mssql
