manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeapp-deployment
  namespace: applicationnamespace 
  labels:
    app: EmployeeApp 
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app: EmployeeApp
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: EmployeeApp
    spec:
      containers:
      - name: employeeapp 
        image: docker.io/bhavnabatra1990/employee:1 # modify to correct image name and tag
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 250m
            memory: 125Mi
        ports:
        - containerPort: 80
          protocol: TCP
