manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeeapp-service
  namespace: applicationnamespace
  annotations:
    dev.okteto.com/auto-ingress: "true"
    service.beta.kubernetes.io/load-balancer-source-ranges: "37.120.0.0/80"
spec:
  type: ExternalName
  externalName: employeeservice.com
  selector:
    app: EmployeeApp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
