manifests/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: applicationnamespace
spec:
  rules:
    - host: employeeservice.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: employeeapp-service
                port:
                  number: 80
